# myagent

./: README.md  pyproject.toml
src/agentic_ai_loop/: __init__.py  core.py  demo.py  tools.py
src/agentic_ai_loop/agent/: act.py  config.py  evaluator.py  observer.py  state.py  think.py
src/agentic_ai_loop/cli/: main.py
src/agentic_ai_loop/execution/: loop.py
src/agentic_ai_loop/llm/: __init__.py  ollama.py
src/agentic_ai_loop/observability/: __init__.py  report.py
src/agentic_ai_loop/persistence/: __init__.py  repository.py
src/agentic_ai_loop/tools/: __init__.py  browser.py  http.py  registry.py
tests/: test_agent_loop.py  test_llm_planner.py  test_structure.py
