[project]
name = "agentic-ai-loop"
version = "0.1.0"
description = "A minimal Observer-Think-Act agent loop built with Python and LangChain-friendly interfaces."
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
