[project]
name = "agentic-ai-loop"
version = "0.1.0"
description = "A minimal Observer-Think-Act agent loop built with Python and LangChain-friendly interfaces."
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "tenacity>=8.0.0",
    "langchain-ollama>=0.2.0",
    "ollama>=0.4.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "tokenizers>=0.19.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
    "deepdiff>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg>=3.1.0",
    "asyncpg>=0.29.0",
    "langsmith>=0.1.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
agentic-ai-loop = "agentic_ai_loop.cli.main:main"
